--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,4 +4,5 @@
 "python.languageServer": "Pylance"
 "python.analysis.inlayHints.functionReturnTypes": true
 "python.analysis.typeCheckingMode": "off"
+"python.analysis.diagnosticMode": "openFilesOnly"
 }
